Placeholder post; update hero text

--- a/src/@lekoarts/gatsby-theme-minimal-blog/texts/hero.mdx
+++ b/src/@lekoarts/gatsby-theme-minimal-blog/texts/hero.mdx
@@ -2,22 +2,10 @@
 title: About
 ---
 
-### Hey, I'm Tim. 👋
+### Hey, I'm Tim Chepeleff. 👋
 
-I solve problems with technology.
+I like to solve problems with technology.
 
-### About me
+At the moment I'm working as a Staff Engineer [@Wayfair](https://tech.wayfair.com/) where I'm promoting sane (and opinionated) deployment patterns that are used by well over 1000 different services on a daily basis. Previously, I was consulting with early stage startups [@BarbershopLabs](http://barbershoplabs.com/) where I was quickly delivering POCs and MVPs to market.
 
-I’m a multi-disciplined Software, Platform, and Reliability engineer with experience spanning various client, server and cloud technologies.
-
-At the moment I'm working as a Staff Release Engineer [@Wayfair](https://tech.wayfair.com/) where I'm promoting sane (and opinionated) deployment patterns that are used by well over 1000 different services on a daily basis. Previously, I was consulting with early stage startups [@BarbershopLabs](http://barbershoplabs.com/) where I was quickly delivering POCs and MVPs to market.
-
-Lately, I've been working extensively with the following:
-
-- Node.js & Python
-- Container technologies (e.g. Docker/Kubernetes)
-- GCP (GKE, GCF, GCE, CloudSQL, and more)
-- Infrastructure As Code (Terraform/Puppet)
-- Microservice Architectures
-- Monorepo Architectures
-- Event Driven Architectures
+Every so often I post my thoughts here. Want to know more? Get in touch!
