--- a/src/@lekoarts/gatsby-theme-minimal-blog/texts/hero.mdx
+++ b/src/@lekoarts/gatsby-theme-minimal-blog/texts/hero.mdx
@@ -6,6 +6,8 @@ title: About
 
 I like to solve problems with technology.
 
-At the moment I'm working as a Staff Engineer [@Wayfair](https://tech.wayfair.com/) where I'm promoting sane (and opinionated) deployment patterns that are used by well over 1000 different services on a daily basis. Previously, I was consulting with early stage startups [@BarbershopLabs](http://barbershoplabs.com/) where I was quickly delivering POCs and MVPs to market.
+At the moment I'm working as a Staff Engineer [@Wayfair](https://tech.wayfair.com/) where I'm promoting sane (and opinionated) release patterns that are used by well over 1000 different services on a daily basis. Previously, I was consulting with early stage startups [@BarbershopLabs](http://barbershoplabs.com/) where I helping to deliver their MVP's to market.
 
-Every so often I post my thoughts here. Want to know more? Get in touch!
+Lately my obsession for building tooling for other developers has been growing exponentially. I focus on keeping it simple, never distracting the developer. Plenty of things do that well enough already.
+
+Every so often I'll post my rants and rambles here. Want to know more?  Get in touch!
