--- a/src/@lekoarts/gatsby-theme-minimal-blog/texts/hero.mdx
+++ b/src/@lekoarts/gatsby-theme-minimal-blog/texts/hero.mdx
@@ -8,6 +8,6 @@ I like to solve problems with technology.
 
 At the moment I'm working as a Staff Engineer [@Wayfair](https://tech.wayfair.com/) where I'm promoting sane (and opinionated) release patterns that are used by well over 1000 different services on a daily basis. Previously, I was consulting with early stage startups [@BarbershopLabs](http://barbershoplabs.com/) where I helping to deliver their MVP's to market.
 
-Lately my obsession for building tooling for other developers has been growing exponentially. I focus on keeping it simple, never distracting the developer. Plenty of things do that well enough already.
+I like to build tools for other developers that make their life easier. I focus on keeping it simple. Always working to reduce the numbers of decisions they need to worry about - convention over configuration.
 
 Every so often I'll post my rants and rambles here. Want to know more?  Get in touch!
