--- a/src/@lekoarts/gatsby-theme-minimal-blog/texts/hero.mdx
+++ b/src/@lekoarts/gatsby-theme-minimal-blog/texts/hero.mdx
@@ -4,10 +4,8 @@ title: About
 
 ### Hey, I'm Tim Chepeleff. 👋
 
-I like to solve problems with technology.
+I like to solve problems with technology. Lately, I've been building tools for other developers that make their day-to-day just that much better. I focus on keeping it simple. Always working to reduce the numbers of decisions they need to worry about - convention over configuration.
 
-At the moment I'm working as a Staff Engineer [@Wayfair](https://tech.wayfair.com/) where I'm promoting sane (and opinionated) release patterns that are used by well over 1000 different services on a daily basis. Previously, I was consulting with early stage startups [@BarbershopLabs](http://barbershoplabs.com/) helping to deliver their MVP's to market. _Quickly_.
-
-I really like building tools for other developers that make their day-to-day just that much better. I focus on keeping it simple. Always working to reduce the numbers of decisions they need to worry about - convention over configuration.
+At the moment I'm working as a Staff Engineer [@Wayfair](https://tech.wayfair.com/) where I'm promoting sane (and opinionated) release patterns that are used by well over 1000 different services on a daily basis. Previously, I was consulting with early-stage startups [@BarbershopLabs](http://barbershoplabs.com/) helping to deliver their MVPs to market. _Quickly_.
 
 Every so often I'll post my rants and rambles here. Want to know more?  Get in touch!
