--- a/content/posts/easy-note-cli/index.mdx
+++ b/content/posts/easy-note-cli/index.mdx
@@ -6,6 +6,8 @@ slug: "/easy-note-cli"
 
 Coming soon!
 
+Edit: I swear I'll actually flesh this out one day.
+
 ```bash
 set_up_notes() {
  CURRENT_DATE=$1
