Update bullet point fmt

--- a/content/posts/2022-goals/index.mdx
+++ b/content/posts/2022-goals/index.mdx
@@ -9,18 +9,18 @@ Time flies, and before you know it, another year has passed. Instead of setting 
 ## Goals
 
 - Ride (Bicycle): 1000 miles.
+- Reach 8 Handicap in golf. (Ended 2021 as an 11.5 handicap)
 - Lift: 150 Times.
-- 8 Handicap in golf. (Ended 2021 as an 11.5 handicap)
-- Bench: 365LB 1RM.
-- Squat: 425LB 1RM.
-- Sholder Press: 225LB 1RM.
-- Barbell Row: 315LB 1RM.
+  - Bench: 365LB 1RM.
+  - Squat: 425LB 1RM.
+  - Sholder Press: 225LB 1RM.
+  - Barbell Row: 315LB 1RM.
 - Read: 12 Books.
 - Spin up a side project. Make $1.00 of revenue.
 - Walk: Avg 7000 Steps Day.
 - Watch: All James Bond Movies with Madison.
 - Watch: All old Jim Carry Movies with Madison.
-- Reach top 1% of ranked players in Halo Infinite.
+- Reach top 1% of ranked players in Halo Infinite. At time of writing, I'm around top 2.5%.
 
 
 ## Why These Goals?
