--- a/content/posts/2022-goals/index.mdx
+++ b/content/posts/2022-goals/index.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Goals for 2022"
-date: 2022-31-01
+date: 2022-01-31
 slug: "/2022-goals"
 ---
 
@@ -9,22 +9,22 @@ Time flies, and before you know it, another year has passed. Instead of setting 
 ## Goals
 
 - Ride (Bicycle): 1000 miles.
-- Reach 8 Handicap in golf. (Ended 2021 as an 11.5 handicap)
+- Walk: Avg 7000 Steps Day.
 - Lift: 150 Times.
   - Bench: 365LB 1RM.
   - Squat: 425LB 1RM.
   - Sholder Press: 225LB 1RM.
   - Barbell Row: 315LB 1RM.
 - Read: 12 Books.
+- Reach 8 Handicap in golf. (Ended 2021 as an 11.5 handicap)
 - Spin up a side project. Make $1.00 of revenue.
-- Walk: Avg 7000 Steps Day.
 - Watch: All James Bond Movies with Madison.
 - Watch: All old Jim Carry Movies with Madison.
-- Reach top 1% of ranked players in Halo Infinite. At time of writing, I'm around top 2.5%.
+- Reach top 1% of ranked players in Halo Infinite. At time of writing, I'm in the top 2.5%.
 
 
 ## Why These Goals?
 
 Some are personal growth goals like reading 12 books. I want to improve myself in different ways and this is a good way to track that. Other goals, like reaching the top percentile in Halo Infinite or improving my Handicap, are more about personal achievement and competition.
 
-The rest? They're pretty much to keep me moving as I continue to adjust to full-time WFH. I want to make sure I spend time more time doing things I never regret, and that make me feel good.
+The rest? They're pretty much to keep me moving physically as I continue to adjust to full-time WFH. I want to make sure I spend time more time doing things I never regret.
