--- a/content/posts/2022-goals/index.mdx
+++ b/content/posts/2022-goals/index.mdx
@@ -1,16 +1,14 @@
 ---
 title: "Goals for 2022"
-date: 2022-01-31
+date: 2022-31-01 ## yyyy-dd-mm
 slug: "/2022-goals"
 ---
 
-Time flies, and before you know it, another year has passed. Instead of setting my goals in a vacuum, I'm going to share them.
-
-## Goals
+Time flies, and before you know it another year has passed. Instead of setting my goals in the vacuum that is my mind I'm going to share them here:
 
 - Ride (Bicycle): 1000 miles.
 - Walk: Avg 7000 Steps Day.
-- Lift: 150 Times.
+- Lift: 150 Times. Some strength goals:
   - Bench: 365LB 1RM.
   - Squat: 425LB 1RM.
   - Sholder Press: 225LB 1RM.
